# clang-syntax-highlighter

./: CMakeLists.txt  Makefile  README.md  SyntaxHighlighter.cpp  SyntaxHighlighter.h  main.cpp
